@@ -80,6 +80,9 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - Added ``profiler`` module to measure lua performance
 - Enabled shift+cursor movement in WorkshopOverlay-derived screens
 
+## Structures
+- ``unit_flags1``: renamed ``dead`` to ``inactive`` to better reflect its use
+
 ## Internals
 - Added fallback for YouCompleteMe database lookup failures (e.g. for newly-created files)
 - jsoncpp: fixed constructor with ``long`` on Linux
